# kcontacts

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  HOWTO  KF5ContactsConfig.cmake.in  KF6ContactsConfig.cmake.in  Mainpage.dox  README  README.AddressFormat  README.md  kcontacts.categories  kcontacts.renamecategories  metainfo.yaml
autotests/: CMakeLists.txt  addresseetest.cpp  addresseetest.h  addressformattest.cpp  addresstest.cpp  addresstest.h  bigread.cpp  bigwrite.cpp  birthdaytest.cpp  birthdaytest.h  calendarurltest.cpp  calendarurltest.h  clientpidmaptest.cpp  clientpidmaptest.h  contactgrouptest.cpp  customidentifiertest.cpp  customidentifiertest.h  datetimetest.cpp  datetimetest.h  emailtest.cpp  emailtest.h  fieldgrouptest.cpp  fieldgrouptest.h  gendertest.cpp  gendertest.h  geotest.cpp  geotest.h  importexportvcardtest.cpp  importexportvcardtest.h  impptest.cpp  impptest.h  kabcargl.cpp  keytest.cpp  keytest.h  langtest.cpp  langtest.h  ldifconvertertest.cpp  ldifconvertertest.h  nicknametest.cpp  nicknametest.h  (+31 more)
autotests/data/: vcard1.vcf.ref  vcard10.vcf.ref  vcard11.vcf.ref  vcard12.vcf.2_1ref  vcard13.vcf  vcard13.vcf.ref  vcard15.vcf.ref  vcard2.vcf.ref  vcard3.vcf.2_1ref  vcard3.vcf.ref  vcard4.vcf.ref  vcard5.vcf.ref  vcardwithitemasapplesupport.vcf.ref
kabc/: .krazy  .reviewboardrc  CMakeLists.txt  HOWTO  KF5AbcConfig.cmake.in  Mainpage.dox  Messages.sh  address.cpp  address.h  addressbook.cpp  addressbook.h  addressee.cpp  addressee.h  addresseedialog.cpp  addresseedialog.h  addresseehelper.cpp  addresseehelper.h  addresseelist.cpp  addresseelist.h  addresslineedit.cpp  addresslineedit.h  contactgroup.cpp  contactgroup.h  contactgroup.xsd  contactgrouptool.cpp  contactgrouptool.h  distributionlist.cpp  distributionlist.h  distributionlistdialog.cpp  distributionlistdialog.h  distributionlisteditor.cpp  distributionlisteditor.h  emailselectdialog.cpp  emailselectdialog.h  errorhandler.cpp  errorhandler.h  field.h  format.h  formatfactory.cpp  formatfactory.h  (+50 more)
kabc/autotests/: CMakeLists.txt  addresseetest.cpp  addresseetest.h  addresstest.cpp  addresstest.h  bigread.cpp  bigwrite.cpp  contactgrouptest.cpp  geotest.cpp  geotest.h  kabcargl.cpp  keytest.cpp  keytest.h  phonenumbertest.cpp  phonenumbertest.h  picturetest.cpp  picturetest.h  secrecytest.cpp  secrecytest.h  soundtest.cpp  soundtest.h  testaddresseelist.cpp  testaddresslineedit.cpp  testkabc.cpp  testkabcdlg.cpp  testlock.cpp  testlock.h  testroundtrip.cpp  testroundtrip.qrc  timezonetest.cpp  timezonetest.h  vcarddragtest.cpp
kabc/formats/: CMakeLists.txt  binary.desktop  binaryformat.cpp  binaryformat.h
kabc/kab/: CMakeLists.txt  kab2kabc.cpp  kabaddressbook.cc  kabaddressbook.h  kabapi.cc  kabapi.h  qconfigDB.cc
kabc/plugins/: CMakeLists.txt
kabc/scripts/: addressee.src.cpp  addressee.src.h  doxygen-preprocess-addressee.sh  entrylist  field.src.cpp  makeaddressee
kabc/src/: CMakeLists.txt  Messages.sh  address.cpp  address.h  addressbook.cpp  addressee.cpp  addressee.h  addresseedialog.cpp  addresseehelper.cpp  addresseehelper.h  addresseelist.cpp  addresseelist.h  addresslineedit.cpp  contactgroup.cpp  contactgroup.h  contactgrouptool.cpp  contactgrouptool.h  distributionlist.cpp  distributionlistdialog.cpp  emailselectdialog.cpp  errorhandler.cpp  errorhandler.h  field.cpp  field.h  format.h  geo.cpp  geo.h  kabc_debug.h  key.cpp  key.h  ldapdn.cpp  ldif.cpp  ldif_p.h  ldifconverter.cpp  ldifconverter.h  lock.cpp  lock.h  locknull.cpp  locknull.h  phonenumber.cpp  (+24 more)
kabc/tests/: CMakeLists.txt  addresseetest.cpp  addresseetest.h  addresstest.cpp  addresstest.h  bigread.cpp  bigwrite.cpp  contactgrouptest.cpp  geotest.cpp  geotest.h  kabcargl.cpp  keytest.cpp  keytest.h  phonenumbertest.cpp  phonenumbertest.h  picturetest.cpp  picturetest.h  secrecytest.cpp  secrecytest.h  soundtest.cpp  testaddressee.cpp  testaddresseelist.cpp  testaddressfmt.cpp  testaddresslineedit.cpp  testdb.cpp  testdistlist.cpp  testkabc.cpp  testkabcdlg.cpp  testlock.cpp  testlock.h  testread.cpp  testread2.cpp  testutils.cpp  testutils.h  testwrite.cpp  timezonetest.cpp  vcarddragtest.cpp
kabc/vcardparser/: CMakeLists.txt  testread.cpp  testread2.cpp  testroundtrip.cpp  testroundtrip.qrc  testutils.cpp  testutils.h  testwrite.cpp  vcard.cpp  vcard.h  vcardline.cpp  vcardline.h  vcardparser.cpp  vcardparser.h
src/: CMakeLists.txt  Messages.sh  address.cpp  address.h  addressbook.cpp  addressbook.h  addressbookplugin.cpp  addressbookplugin.h  addressbookpluginloader.cpp  addressbookpluginloader.h  addressee.cpp  addressee.h  addresseehelper.cpp  addresseehelper.h  addresseehelper_p.h  addresseelist.cpp  addresseelist.h  addressformat.cpp  addressformat.h  addressformat_p.h  addressformatparser_p.h  addressformatrc  addressformatscript_p.h  addressformatter.cpp  addressformatter_p.h  calendarurl.cpp  calendarurl.h  clientpidmap.cpp  clientpidmap.h  contactgroup.cpp  contactgroup.h  contactgrouptool.cpp  contactgrouptool.h  countrytoisomap_data.cpp  countrytoisomap_p.cpp  countrytoisomap_p.h  email.cpp  email.h  errorhandler.cpp  errorhandler.h  (+66 more)
src/converter/: CMakeLists.txt  ldifconverter.cpp  ldifconverter.h  vcardconverter.cpp  vcardconverter.h
src/generator/: CMakeLists.txt  generateisotocountrymap.cpp  main.cpp  translatedcountrylist.cpp  translatedcountrylist.h
src/improtocols/: CMakeLists.txt  aim.desktop  delta.desktop  discord.desktop  facebook.desktop  fluxer.desktop  gg.desktop  googletalk.desktop  groupwise.desktop  icq.desktop  improtocols.qrc  irc.desktop  matrix.desktop  meanwhile.desktop  msn.desktop  mumble.desktop  qq.desktop  rocketchat.desktop  signal.desktop  sip.desktop  skype.desktop  slack.desktop  sms.desktop  teams.desktop  telegram.desktop  threema.desktop  twitter.desktop  whatsapp.desktop  xmpp.desktop  ymsgr.desktop
src/qml/: CMakeLists.txt  types.h
tests/: CMakeLists.txt  qmlintegrationtest.cpp  qmlintegrationtest.qml  qmlintegrationtest.qrc  testread.cpp  testread2.cpp  testutils.cpp  testutils.h  testwrite.cpp
(+200 files in other folders)
